tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unsupported-string-escape.ari
fn main() -> i64 {
  let text = "\q";
  return 0;
}
